Changes to 1.3.0 +nb
[FIXES]
*battle.php --> another unset nightmare
*dragon.php --> another unset nightmare
*forest.php --> added a hook forestsearch_noevent to have one only going in fight mode, not events, and one for the main page forest_enter
*moderate.php --> strange error, checking now if moderated table holds a comment, if not, says so
*lib/all_tables.php --> module_hooks has a wrongly named key field 'mfunction' which was a remnant of a rename for the now-reserved word 'function'
*pages/clan/clan_motd.php --> rank setting not fully correct if ranks were missing, unset issue
*lib/charcleanup.php --> counter as not defined, hence clan couldn't auto-disband
*lib/checkban.php --> uniqueid typo, also some isset() again for uninitalized stuff
*lib/commentary --> added the section to the commentline-hook, one more isset() check
*lib/extended-battle.php --> another unset nightmare, also a typo
*lib/output.php --> bug, output for debug did not show anymore, typo in binary comparison
*lib/pageparts.php --> added "Manage Modules" shortlink to top right corner (petitiondisplay)
*lib/pageparts.php --> another unset $list stuff fixed in there 
*lib/pageparts.php --> link for changing the favicon to ... more modern stuff
*lib/sendmail.php --> sending to a non-valid email address format should not be allowed -> skipped (no good error handling optional, because it is not a system error)
*lib/serialization.php --> unserialize() is not safe, and needs a wrapper for newer php versions
*lib/showform.php --> unset nightmare

[CHANGES]

Changes to 1.2.10 +nb
In general, this release to 1.3.0 does incorporate the switch from PHP7 to PHP8.
THINGS MIGHT BREAK if you use this release in PHP7
[FIXES]
[CHANGES]

Changes to 1.2.9 +nb
[FIXES]
*motd.php --> month is now a valid DATETIME, so set to 31 as last day returns an error
*pages/clan/clan_default.php -> GROUP BY condition again (see mysql 8 issues) does not accept an order anymore (rightfully)